// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Verify children for actual custom-router demo page get properly removed: Changed 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_component": PageCustomRouter {
    "__b": null,
    "__c": null,
    "__d": false,
    "__k": undefined,
    "__p": null,
    "__r": undefined,
    "__s": null,
    "__x": false,
    "base": [Circular],
    "context": Object {},
    "goBack": [Function],
    "props": Object {
      "children": Array [],
    },
    "setNav": [Function],
    "state": Object {
      "navStack": Array [
        "/test",
      ],
      "route": "/test",
    },
  },
  "_componentConstructor": [Function],
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [
    StackLayout {
      "__n": "stackLayout",
      "__preactattr_": Object {},
      "_component": Route2 {
        "__b": null,
        "__c": null,
        "__d": false,
        "__k": undefined,
        "__p": null,
        "__r": undefined,
        "__s": null,
        "__x": false,
        "base": [Circular],
        "context": Object {},
        "props": Object {
          "children": Array [],
          "goBack": [Function],
          "navigateTo": [Function],
        },
        "state": Object {},
      },
      "_componentConstructor": [Function],
      "_eventListener": Array [],
      "attributes": Array [],
      "childNodes": Array [
        Label {
          "__n": "label",
          "__preactattr_": Object {
            "text": "Second Page",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Second Page",
        },
        Button {
          "__l": Object {
            "tap": [Function],
          },
          "__n": "button",
          "__preactattr_": Object {
            "onTap": [Function],
            "text": "Go to First",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Go to First",
        },
        Label {
          "__l": Object {
            "tap": [Function],
          },
          "__n": "label",
          "__preactattr_": Object {
            "onTap": [Function],
            "text": "Go Back within custom router",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Go Back within custom router",
        },
        Button {
          "__l": Object {
            "tap": [Function],
          },
          "__n": "button",
          "__preactattr_": Object {
            "onTap": [Function],
            "text": "Go Back in NativeScript Router",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Go Back in NativeScript Router",
        },
      ],
      "firstLoad": true,
      "loaded": false,
      "nodeName": "STACKLAYOUT",
      "nodeType": 1,
      "parentNode": [Circular],
      "set": [Function],
    },
  ],
  "content": StackLayout {
    "__n": "stackLayout",
    "__preactattr_": Object {},
    "_component": Route2 {
      "__b": null,
      "__c": null,
      "__d": false,
      "__k": undefined,
      "__p": null,
      "__r": undefined,
      "__s": null,
      "__x": false,
      "base": [Circular],
      "context": Object {},
      "props": Object {
        "children": Array [],
        "goBack": [Function],
        "navigateTo": [Function],
      },
      "state": Object {},
    },
    "_componentConstructor": [Function],
    "_eventListener": Array [],
    "attributes": Array [],
    "childNodes": Array [
      Label {
        "__n": "label",
        "__preactattr_": Object {
          "text": "Second Page",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Second Page",
      },
      Button {
        "__l": Object {
          "tap": [Function],
        },
        "__n": "button",
        "__preactattr_": Object {
          "onTap": [Function],
          "text": "Go to First",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Go to First",
      },
      Label {
        "__l": Object {
          "tap": [Function],
        },
        "__n": "label",
        "__preactattr_": Object {
          "onTap": [Function],
          "text": "Go Back within custom router",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Go Back within custom router",
      },
      Button {
        "__l": Object {
          "tap": [Function],
        },
        "__n": "button",
        "__preactattr_": Object {
          "onTap": [Function],
          "text": "Go Back in NativeScript Router",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Go Back in NativeScript Router",
      },
    ],
    "firstLoad": true,
    "loaded": false,
    "nodeName": "STACKLAYOUT",
    "nodeType": 1,
    "parentNode": [Circular],
    "set": [Function],
  },
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "_removeView": [Function],
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [
      [Circular],
    ],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [],
      "key": undefined,
      "nodeName": [Function],
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;

exports[`Verify children for actual custom-router demo page get properly removed: Unchanged 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_component": PageCustomRouter {
    "__b": null,
    "__c": null,
    "__d": false,
    "__k": undefined,
    "__p": null,
    "__r": undefined,
    "__s": null,
    "__x": false,
    "base": [Circular],
    "context": Object {},
    "goBack": [Function],
    "props": Object {
      "children": Array [],
    },
    "setNav": [Function],
    "state": Object {
      "navStack": Array [],
      "route": "/",
    },
  },
  "_componentConstructor": [Function],
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [
    StackLayout {
      "__n": "stackLayout",
      "__preactattr_": Object {},
      "_component": Route1 {
        "__b": null,
        "__c": null,
        "__d": false,
        "__k": undefined,
        "__p": null,
        "__r": undefined,
        "__s": null,
        "__x": false,
        "base": [Circular],
        "context": Object {},
        "props": Object {
          "children": Array [],
          "goBack": [Function],
          "navigateTo": [Function],
        },
        "state": Object {},
      },
      "_componentConstructor": [Function],
      "_eventListener": Array [],
      "attributes": Array [],
      "childNodes": Array [
        Label {
          "__n": "label",
          "__preactattr_": Object {
            "text": "First Page",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "First Page",
        },
        Button {
          "__l": Object {
            "tap": [Function],
          },
          "__n": "button",
          "__preactattr_": Object {
            "onTap": [Function],
            "text": "Go to Second",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Go to Second",
        },
        Label {
          "__l": Object {
            "tap": [Function],
          },
          "__n": "label",
          "__preactattr_": Object {
            "onTap": [Function],
            "text": "Go Back within custom router",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Go Back within custom router",
        },
        Button {
          "__l": Object {
            "tap": [Function],
          },
          "__n": "button",
          "__preactattr_": Object {
            "onTap": [Function],
            "text": "Go Back in NativeScript Router",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Go Back in NativeScript Router",
        },
      ],
      "firstLoad": true,
      "loaded": false,
      "nodeName": "STACKLAYOUT",
      "nodeType": 1,
      "parentNode": [Circular],
      "set": [Function],
    },
  ],
  "content": StackLayout {
    "__n": "stackLayout",
    "__preactattr_": Object {},
    "_component": Route1 {
      "__b": null,
      "__c": null,
      "__d": false,
      "__k": undefined,
      "__p": null,
      "__r": undefined,
      "__s": null,
      "__x": false,
      "base": [Circular],
      "context": Object {},
      "props": Object {
        "children": Array [],
        "goBack": [Function],
        "navigateTo": [Function],
      },
      "state": Object {},
    },
    "_componentConstructor": [Function],
    "_eventListener": Array [],
    "attributes": Array [],
    "childNodes": Array [
      Label {
        "__n": "label",
        "__preactattr_": Object {
          "text": "First Page",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "First Page",
      },
      Button {
        "__l": Object {
          "tap": [Function],
        },
        "__n": "button",
        "__preactattr_": Object {
          "onTap": [Function],
          "text": "Go to Second",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Go to Second",
      },
      Label {
        "__l": Object {
          "tap": [Function],
        },
        "__n": "label",
        "__preactattr_": Object {
          "onTap": [Function],
          "text": "Go Back within custom router",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Go Back within custom router",
      },
      Button {
        "__l": Object {
          "tap": [Function],
        },
        "__n": "button",
        "__preactattr_": Object {
          "onTap": [Function],
          "text": "Go Back in NativeScript Router",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Go Back in NativeScript Router",
      },
    ],
    "firstLoad": true,
    "loaded": false,
    "nodeName": "STACKLAYOUT",
    "nodeType": 1,
    "parentNode": [Circular],
    "set": [Function],
  },
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "_removeView": [Function],
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [
      [Circular],
    ],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [],
      "key": undefined,
      "nodeName": [Function],
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;

exports[`Verify children for actual custom-router demo page get properly removed: after various changes 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_component": PageCustomRouter {
    "__b": null,
    "__c": null,
    "__d": false,
    "__k": undefined,
    "__p": null,
    "__r": undefined,
    "__s": null,
    "__x": false,
    "base": [Circular],
    "context": Object {},
    "goBack": [Function],
    "props": Object {
      "children": Array [],
    },
    "setNav": [Function],
    "state": Object {
      "navStack": Array [
        "/test",
      ],
      "route": "/test",
    },
  },
  "_componentConstructor": [Function],
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [
    StackLayout {
      "__n": "stackLayout",
      "__preactattr_": Object {},
      "_component": Route2 {
        "__b": null,
        "__c": null,
        "__d": false,
        "__k": undefined,
        "__p": null,
        "__r": undefined,
        "__s": null,
        "__x": false,
        "base": [Circular],
        "context": Object {},
        "props": Object {
          "children": Array [],
          "goBack": [Function],
          "navigateTo": [Function],
        },
        "state": Object {},
      },
      "_componentConstructor": [Function],
      "_eventListener": Array [],
      "attributes": Array [],
      "childNodes": Array [
        Label {
          "__n": "label",
          "__preactattr_": Object {
            "text": "Second Page",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Second Page",
        },
        Button {
          "__l": Object {
            "tap": [Function],
          },
          "__n": "button",
          "__preactattr_": Object {
            "onTap": [Function],
            "text": "Go to First",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Go to First",
        },
        Label {
          "__l": Object {
            "tap": [Function],
          },
          "__n": "label",
          "__preactattr_": Object {
            "onTap": [Function],
            "text": "Go Back within custom router",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Go Back within custom router",
        },
        Button {
          "__l": Object {
            "tap": [Function],
          },
          "__n": "button",
          "__preactattr_": Object {
            "onTap": [Function],
            "text": "Go Back in NativeScript Router",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Go Back in NativeScript Router",
        },
      ],
      "firstLoad": true,
      "loaded": false,
      "nodeName": "STACKLAYOUT",
      "nodeType": 1,
      "parentNode": [Circular],
      "set": [Function],
    },
  ],
  "content": StackLayout {
    "__n": "stackLayout",
    "__preactattr_": Object {},
    "_component": Route2 {
      "__b": null,
      "__c": null,
      "__d": false,
      "__k": undefined,
      "__p": null,
      "__r": undefined,
      "__s": null,
      "__x": false,
      "base": [Circular],
      "context": Object {},
      "props": Object {
        "children": Array [],
        "goBack": [Function],
        "navigateTo": [Function],
      },
      "state": Object {},
    },
    "_componentConstructor": [Function],
    "_eventListener": Array [],
    "attributes": Array [],
    "childNodes": Array [
      Label {
        "__n": "label",
        "__preactattr_": Object {
          "text": "Second Page",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Second Page",
      },
      Button {
        "__l": Object {
          "tap": [Function],
        },
        "__n": "button",
        "__preactattr_": Object {
          "onTap": [Function],
          "text": "Go to First",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Go to First",
      },
      Label {
        "__l": Object {
          "tap": [Function],
        },
        "__n": "label",
        "__preactattr_": Object {
          "onTap": [Function],
          "text": "Go Back within custom router",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Go Back within custom router",
      },
      Button {
        "__l": Object {
          "tap": [Function],
        },
        "__n": "button",
        "__preactattr_": Object {
          "onTap": [Function],
          "text": "Go Back in NativeScript Router",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Go Back in NativeScript Router",
      },
    ],
    "firstLoad": true,
    "loaded": false,
    "nodeName": "STACKLAYOUT",
    "nodeType": 1,
    "parentNode": [Circular],
    "set": [Function],
  },
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "_removeView": [Function],
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [
      [Circular],
    ],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [],
      "key": undefined,
      "nodeName": [Function],
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;

exports[`Verify children for actual custom-router demo page get properly removed: reset to unchanged again 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_component": PageCustomRouter {
    "__b": null,
    "__c": null,
    "__d": false,
    "__k": undefined,
    "__p": null,
    "__r": undefined,
    "__s": null,
    "__x": false,
    "base": [Circular],
    "context": Object {},
    "goBack": [Function],
    "props": Object {
      "children": Array [],
    },
    "setNav": [Function],
    "state": Object {
      "navStack": Array [
        "/test",
      ],
      "route": "/test",
    },
  },
  "_componentConstructor": [Function],
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [
    StackLayout {
      "__n": "stackLayout",
      "__preactattr_": Object {},
      "_component": Route2 {
        "__b": null,
        "__c": null,
        "__d": false,
        "__k": undefined,
        "__p": null,
        "__r": undefined,
        "__s": null,
        "__x": false,
        "base": [Circular],
        "context": Object {},
        "props": Object {
          "children": Array [],
          "goBack": [Function],
          "navigateTo": [Function],
        },
        "state": Object {},
      },
      "_componentConstructor": [Function],
      "_eventListener": Array [],
      "attributes": Array [],
      "childNodes": Array [
        Label {
          "__n": "label",
          "__preactattr_": Object {
            "text": "Second Page",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Second Page",
        },
        Button {
          "__l": Object {
            "tap": [Function],
          },
          "__n": "button",
          "__preactattr_": Object {
            "onTap": [Function],
            "text": "Go to First",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Go to First",
        },
        Label {
          "__l": Object {
            "tap": [Function],
          },
          "__n": "label",
          "__preactattr_": Object {
            "onTap": [Function],
            "text": "Go Back within custom router",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Go Back within custom router",
        },
        Button {
          "__l": Object {
            "tap": [Function],
          },
          "__n": "button",
          "__preactattr_": Object {
            "onTap": [Function],
            "text": "Go Back in NativeScript Router",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "Go Back in NativeScript Router",
        },
      ],
      "firstLoad": true,
      "loaded": false,
      "nodeName": "STACKLAYOUT",
      "nodeType": 1,
      "parentNode": [Circular],
      "set": [Function],
    },
  ],
  "content": StackLayout {
    "__n": "stackLayout",
    "__preactattr_": Object {},
    "_component": Route2 {
      "__b": null,
      "__c": null,
      "__d": false,
      "__k": undefined,
      "__p": null,
      "__r": undefined,
      "__s": null,
      "__x": false,
      "base": [Circular],
      "context": Object {},
      "props": Object {
        "children": Array [],
        "goBack": [Function],
        "navigateTo": [Function],
      },
      "state": Object {},
    },
    "_componentConstructor": [Function],
    "_eventListener": Array [],
    "attributes": Array [],
    "childNodes": Array [
      Label {
        "__n": "label",
        "__preactattr_": Object {
          "text": "Second Page",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Second Page",
      },
      Button {
        "__l": Object {
          "tap": [Function],
        },
        "__n": "button",
        "__preactattr_": Object {
          "onTap": [Function],
          "text": "Go to First",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Go to First",
      },
      Label {
        "__l": Object {
          "tap": [Function],
        },
        "__n": "label",
        "__preactattr_": Object {
          "onTap": [Function],
          "text": "Go Back within custom router",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Go Back within custom router",
      },
      Button {
        "__l": Object {
          "tap": [Function],
        },
        "__n": "button",
        "__preactattr_": Object {
          "onTap": [Function],
          "text": "Go Back in NativeScript Router",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "Go Back in NativeScript Router",
      },
    ],
    "firstLoad": true,
    "loaded": false,
    "nodeName": "STACKLAYOUT",
    "nodeType": 1,
    "parentNode": [Circular],
    "set": [Function],
  },
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "_removeView": [Function],
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [
      [Circular],
    ],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [],
      "key": undefined,
      "nodeName": [Function],
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;

exports[`Verify children for custom-router demo page get properly removed: Changed 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_component": ChildChange {
    "__b": null,
    "__c": null,
    "__d": false,
    "__k": undefined,
    "__p": null,
    "__r": undefined,
    "__s": null,
    "__x": false,
    "base": [Circular],
    "context": Object {},
    "props": Object {
      "children": Array [],
    },
    "state": Object {
      "changed": true,
    },
  },
  "_componentConstructor": [Function],
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [
    StackLayout {
      "__n": "stackLayout",
      "__preactattr_": Object {},
      "_eventListener": Array [],
      "attributes": Array [],
      "childNodes": Array [
        Label {
          "__n": "label",
          "__preactattr_": Object {
            "text": "changed Label #1",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "changed Label #1",
        },
        Button {
          "__n": "button",
          "__preactattr_": Object {
            "text": "changed Button #1",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "changed Button #1",
        },
        Label {
          "__n": "label",
          "__preactattr_": Object {
            "text": "changed Label #2",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "changed Label #2",
        },
        Button {
          "__n": "button",
          "__preactattr_": Object {
            "text": "changed Button #2",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "changed Button #2",
        },
      ],
      "firstLoad": true,
      "loaded": false,
      "nodeName": "STACKLAYOUT",
      "nodeType": 1,
      "parentNode": [Circular],
      "set": [Function],
    },
  ],
  "content": StackLayout {
    "__n": "stackLayout",
    "__preactattr_": Object {},
    "_eventListener": Array [],
    "attributes": Array [],
    "childNodes": Array [
      Label {
        "__n": "label",
        "__preactattr_": Object {
          "text": "changed Label #1",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "changed Label #1",
      },
      Button {
        "__n": "button",
        "__preactattr_": Object {
          "text": "changed Button #1",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "changed Button #1",
      },
      Label {
        "__n": "label",
        "__preactattr_": Object {
          "text": "changed Label #2",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "changed Label #2",
      },
      Button {
        "__n": "button",
        "__preactattr_": Object {
          "text": "changed Button #2",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "changed Button #2",
      },
    ],
    "firstLoad": true,
    "loaded": false,
    "nodeName": "STACKLAYOUT",
    "nodeType": 1,
    "parentNode": [Circular],
    "set": [Function],
  },
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "_removeView": [Function],
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [
      [Circular],
    ],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [],
      "key": undefined,
      "nodeName": [Function],
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;

exports[`Verify children for custom-router demo page get properly removed: Unchanged 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_component": ChildChange {
    "__b": null,
    "__c": null,
    "__d": false,
    "__k": undefined,
    "__p": null,
    "__r": undefined,
    "__s": null,
    "__x": false,
    "base": [Circular],
    "context": Object {},
    "props": Object {
      "children": Array [],
    },
    "state": Object {},
  },
  "_componentConstructor": [Function],
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [
    StackLayout {
      "__n": "stackLayout",
      "__preactattr_": Object {},
      "_eventListener": Array [],
      "attributes": Array [],
      "childNodes": Array [
        Label {
          "__n": "label",
          "__preactattr_": Object {
            "text": "WE ARE UNCHANGED",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "WE ARE UNCHANGED",
        },
        Button {
          "__n": "button",
          "__preactattr_": Object {
            "text": "SO VERY UNCHANGED",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "SO VERY UNCHANGED",
        },
        Label {
          "__n": "label",
          "__preactattr_": Object {
            "text": "MORE UNCHANGED",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "MORE UNCHANGED",
        },
        Button {
          "__n": "button",
          "__preactattr_": Object {
            "text": "THAN YOU ARE",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "THAN YOU ARE",
        },
      ],
      "firstLoad": true,
      "loaded": false,
      "nodeName": "STACKLAYOUT",
      "nodeType": 1,
      "parentNode": [Circular],
      "set": [Function],
    },
  ],
  "content": StackLayout {
    "__n": "stackLayout",
    "__preactattr_": Object {},
    "_eventListener": Array [],
    "attributes": Array [],
    "childNodes": Array [
      Label {
        "__n": "label",
        "__preactattr_": Object {
          "text": "WE ARE UNCHANGED",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "WE ARE UNCHANGED",
      },
      Button {
        "__n": "button",
        "__preactattr_": Object {
          "text": "SO VERY UNCHANGED",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "SO VERY UNCHANGED",
      },
      Label {
        "__n": "label",
        "__preactattr_": Object {
          "text": "MORE UNCHANGED",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "MORE UNCHANGED",
      },
      Button {
        "__n": "button",
        "__preactattr_": Object {
          "text": "THAN YOU ARE",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "THAN YOU ARE",
      },
    ],
    "firstLoad": true,
    "loaded": false,
    "nodeName": "STACKLAYOUT",
    "nodeType": 1,
    "parentNode": [Circular],
    "set": [Function],
  },
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "_removeView": [Function],
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [
      [Circular],
    ],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [],
      "key": undefined,
      "nodeName": [Function],
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;

exports[`Verify children for custom-router demo page get properly removed: reset to unchanged again 1`] = `
Page {
  "__n": "page",
  "__preactattr_": Object {},
  "_component": ChildChange {
    "__b": null,
    "__c": null,
    "__d": false,
    "__k": undefined,
    "__p": null,
    "__r": undefined,
    "__s": null,
    "__x": false,
    "base": [Circular],
    "context": Object {},
    "props": Object {
      "children": Array [],
    },
    "state": Object {
      "changed": true,
    },
  },
  "_componentConstructor": [Function],
  "_eventListener": Array [],
  "attributes": Array [],
  "childNodes": Array [
    StackLayout {
      "__n": "stackLayout",
      "__preactattr_": Object {},
      "_eventListener": Array [],
      "attributes": Array [],
      "childNodes": Array [
        Label {
          "__n": "label",
          "__preactattr_": Object {
            "text": "changed Label #1",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "changed Label #1",
        },
        Button {
          "__n": "button",
          "__preactattr_": Object {
            "text": "changed Button #1",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "changed Button #1",
        },
        Label {
          "__n": "label",
          "__preactattr_": Object {
            "text": "changed Label #2",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "LABEL",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "changed Label #2",
        },
        Button {
          "__n": "button",
          "__preactattr_": Object {
            "text": "changed Button #2",
          },
          "_eventListener": Array [],
          "attributes": Array [],
          "childNodes": Array [],
          "firstLoad": true,
          "loaded": false,
          "nodeName": "BUTTON",
          "nodeType": 1,
          "parentNode": [Circular],
          "set": [Function],
          "text": "changed Button #2",
        },
      ],
      "firstLoad": true,
      "loaded": false,
      "nodeName": "STACKLAYOUT",
      "nodeType": 1,
      "parentNode": [Circular],
      "set": [Function],
    },
  ],
  "content": StackLayout {
    "__n": "stackLayout",
    "__preactattr_": Object {},
    "_eventListener": Array [],
    "attributes": Array [],
    "childNodes": Array [
      Label {
        "__n": "label",
        "__preactattr_": Object {
          "text": "changed Label #1",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "changed Label #1",
      },
      Button {
        "__n": "button",
        "__preactattr_": Object {
          "text": "changed Button #1",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "changed Button #1",
      },
      Label {
        "__n": "label",
        "__preactattr_": Object {
          "text": "changed Label #2",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "LABEL",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "changed Label #2",
      },
      Button {
        "__n": "button",
        "__preactattr_": Object {
          "text": "changed Button #2",
        },
        "_eventListener": Array [],
        "attributes": Array [],
        "childNodes": Array [],
        "firstLoad": true,
        "loaded": false,
        "nodeName": "BUTTON",
        "nodeType": 1,
        "parentNode": [Circular],
        "set": [Function],
        "text": "changed Button #2",
      },
    ],
    "firstLoad": true,
    "loaded": false,
    "nodeName": "STACKLAYOUT",
    "nodeType": 1,
    "parentNode": [Circular],
    "set": [Function],
  },
  "firstLoad": true,
  "loaded": false,
  "mergeInto": undefined,
  "nodeName": "PAGE",
  "nodeType": 1,
  "parentNode": Object {
    "_removeView": [Function],
    "appendChild": [Function],
    "attributes": Array [],
    "childNodes": Array [
      [Circular],
    ],
    "mergeInto": undefined,
    "nodeName": "artificalParent",
    "nodeType": "artificalParent",
    "remove": [Function],
    "removeChild": [Function],
    "renderedComponent": VNode {
      "attributes": undefined,
      "children": Array [],
      "key": undefined,
      "nodeName": [Function],
    },
    "renderedInto": null,
  },
  "renderedComponent": VNode {
    "attributes": undefined,
    "children": Array [],
    "key": undefined,
    "nodeName": [Function],
  },
  "renderedInto": [Circular],
  "set": [Function],
}
`;
